Add device parameter to rest api
